refactor: clean up IndexTTS2 architecture and add ruff linting
- Add ruff as dev dependency with lint/format config in pyproject.toml
- Extract QwenEmotion and find_most_similar_cosine to indextts/emotion.py
- Split IndexTTS2.__init__ into focused private methods (_resolve_device,
  _load_config, _load_gpt, _load_semantic, _load_s2mel, _load_vocoder,
  _load_text, _load_emotion_matrices, _init_cache)
- Extract _get_speaker_conditioning and _get_emotion_conditioning from
  infer_generator to reduce method complexity
- Remove dead code: gr_progress, __main__ block, commented-out debug code
- Run ruff format across non-vendored source files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,26 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["indextts"]
 
+[dependency-groups]
+dev = ["ruff>=0.11"]
+
+[tool.ruff]
+line-length = 120
+target-version = "py310"
+extend-exclude = [
+    "indextts/gpt/",
+    "indextts/s2mel/",
+    "indextts/utils/maskgct*/",
+    "indextts/utils/xtransformers.py",
+    "indextts/accel/",
+]
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP"]
+ignore = ["E501", "E402"]
+
+[tool.ruff.format]
+quote-style = "double"
+
 [tool.uv]
 no-build-isolation-package = ["deepspeed", "flash-attn"]
