--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
   "torch>=2.0",
   "torchaudio>=2.0",
   "torchcodec>=0.10",
-  "transformers>=4.52,<4.53",
+  "transformers>=5.0",
   "safetensors>=0.4",
   "accelerate>=1.0",
   "huggingface_hub>=0.20",
