feat: Introduce structured logging, add comprehensive test suite, and configure CI/CD workflows.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ desktop.ini
 
 # Test outputs.
 test_*.wav
+.coverage
+htmlcov/
+.pytest_cache/
 
 # CUDA kernel build artifacts.
 indextts/s2mel/modules/bigvgan/alias_free_activation/cuda/build/
