--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,10 +41,14 @@ dependencies = [
 
 [project.optional-dependencies]
 es = [
+  "pynini>=2.1.7",
   "nemo-text-processing>=1.1",
 ]
 flash-attn = [
   "flash-attn>=2.1",
+]
+sage-attn = [
+  "sageattention>=1.0",
 ]
 deepspeed = [
   "deepspeed>=0.14",
@@ -59,6 +63,7 @@ packages = ["indextts"]
 
 [dependency-groups]
 dev = ["ruff>=0.11"]
+test = ["pytest>=8.0", "pytest-cov>=6.0"]
 
 [tool.ruff]
 line-length = 120
@@ -79,4 +84,4 @@ ignore = ["E501", "E402"]
 quote-style = "double"
 
 [tool.uv]
-no-build-isolation-package = ["deepspeed", "flash-attn"]
+no-build-isolation-package = ["deepspeed", "flash-attn", "pynini"]
