--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
   "torch>=2.0",
   "torchaudio>=2.0",
   "torchcodec>=0.10",
-  "transformers>=4.52,<4.53",
+  "transformers>=5.0",
   "safetensors>=0.4",
   "accelerate>=1.0",
   "huggingface_hub>=0.20",
@@ -46,6 +46,9 @@ es = [
 flash-attn = [
   "flash-attn>=2.1",
 ]
+sage-attn = [
+  "sageattention>=1.0",
+]
 deepspeed = [
   "deepspeed>=0.14",
 ]
@@ -59,6 +62,7 @@ packages = ["indextts"]
 
 [dependency-groups]
 dev = ["ruff>=0.11"]
+test = ["pytest>=8.0", "pytest-cov>=6.0"]
 
 [tool.ruff]
 line-length = 120
@@ -79,4 +83,5 @@ ignore = ["E501", "E402"]
 quote-style = "double"
 
 [tool.uv]
-no-build-isolation-package = ["deepspeed", "flash-attn"]
+no-build-isolation-package = ["deepspeed", "flash-attn", "pynini"]
+override-dependencies = ["pynini>=2.1.7"]
