fix: use simple version tags (v*) for release-please
release-please was generating tags like `index-tts-inference-v1.0.0`
which didn't match the `v*` pattern in the release workflow, preventing
PyPI publish from triggering.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,8 @@
   "packages": {
     ".": {
       "release-type": "python",
-      "package-name": "index-tts-inference"
+      "package-name": "index-tts-inference",
+      "include-component-in-tag": false
     }
   }
 }
