--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "index-tts-inference"
+name = "indextts2-inference"
 version = "2.0.0"
 description = "IndexTTS2 inference library: zero-shot text-to-speech with emotional control"
 authors = [{ name = "Bilibili IndexTTS Team" }]
